--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,8 +1,9 @@
 name: 'GitHub Actions Weather Bot'
 
 on:
+  push:
   schedule:
-    - cron: '* * * * *'
+    - cron: '*/2 * * * *'
 
 jobs:
   bot:
