--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -2,7 +2,8 @@ name: 'GitHub Actions Weather Bot'
 
 on:
   schedule:
-  - cron: "*/5 * * * *"
+    # * is a special character in YAML so you have to quote this string
+    - cron:  '*/15 * * * *'
 
 jobs:
   bot:
