--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -1,9 +1,10 @@
 name: 'GitHub Actions Weather Bot'
 
 on:
-  schedule:
+  push:
+  #schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '*/5 * * * *'
+    #- cron:  '*/5 * * * *'
 
 jobs:
   bot:
